[gd_scene load_steps=9 format=3 uid="uid://4tdulc68ydv"]

[ext_resource type="Script" uid="uid://cs5u1786mpxuy" path="res://gameplay/minigames/robo_repair.gd" id="1_tyev6"]
[ext_resource type="PackedScene" uid="uid://07ujs6uw6ish" path="res://gameplay/coreGameplay/MinigameTimer.tscn" id="2_yseuw"]
[ext_resource type="PackedScene" uid="uid://dsdywh8rg463k" path="res://gameplay/minigameComponents/RoboRepair/gear.tscn" id="3_j7hqi"]
[ext_resource type="Texture2D" uid="uid://de243r7e8tf6x" path="res://assets/minigames/Oven/dims.apnews.jpg" id="4_yseuw"]

[sub_resource type="Animation" id="Animation_vy5ta"]
resource_name = "Fail"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Dims_apnews:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Dims_apnews:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Dims_apnews:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707964]
}

[sub_resource type="Animation" id="Animation_2pff3"]
resource_name = "Pass"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Dims_apnews:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Dims_apnews:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_16em2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Dims_apnews:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Dims_apnews:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Dims_apnews:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707964]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_un7j3"]
_data = {
&"Fail": SubResource("Animation_vy5ta"),
&"Pass": SubResource("Animation_2pff3"),
&"RESET": SubResource("Animation_16em2")
}

[node name="RoboRepair" type="Node2D"]
script = ExtResource("1_tyev6")

[node name="MinigameTimer" parent="." instance=ExtResource("2_yseuw")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 11.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
theme_override_font_sizes/bold_italics_font_size = 8
theme_override_font_sizes/italics_font_size = 8
theme_override_font_sizes/mono_font_size = 8
bbcode_enabled = true
text = "TEST TEXT"

[node name="Container" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_top = 0.096
anchor_right = 0.5
anchor_bottom = 0.90400004
offset_top = -20.208
offset_bottom = -0.29205322
grow_vertical = 2

[node name="HSlider" type="HSlider" parent="CanvasLayer/Container"]
layout_mode = 0
offset_top = 8.007999
offset_right = 100.0
offset_bottom = 30.008
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5

[node name="HSlider2" type="HSlider" parent="CanvasLayer/Container"]
layout_mode = 0
offset_top = 30.008
offset_right = 100.0
offset_bottom = 52.008
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5

[node name="Gear" parent="CanvasLayer/Container" instance=ExtResource("3_j7hqi")]
position = Vector2(24, 81.007996)

[node name="Gear2" parent="CanvasLayer/Container" instance=ExtResource("3_j7hqi")]
position = Vector2(66, 102.007996)
gear_name = "GearB"

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.50795
offset_right = 132.0
offset_bottom = -9.50795
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/Container/Buttons"]
layout_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="CheckButton2" type="CheckButton" parent="CanvasLayer/Container/Buttons"]
layout_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="CheckButton3" type="CheckButton" parent="CanvasLayer/Container/Buttons"]
layout_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="Dims_apnews" type="Sprite2D" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(87.99999, 99.00001)
rotation = 1.5707964
scale = Vector2(0.14784458, 0.13138554)
texture = ExtResource("4_yseuw")

[node name="SubmitButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 46.0
grow_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Submit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_un7j3")
}
